--- a/references.bib
+++ b/references.bib
@@ -85,4 +85,33 @@ doi = {http://doi.ieeecomputersociety.org/10.1109/MCSE.2007.58},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
+@inproceedings{Marcel:2010:TMP:1873951.1874254,
+ author = {Marcel, S{\'e}bastien and Rodriguez, Yann},
+ title = {Torchvision the machine-vision package of torch},
+ booktitle = {Proceedings of the international conference on Multimedia},
+ series = {MM '10},
+ year = {2010},
+ isbn = {978-1-60558-933-6},
+ location = {Firenze, Italy},
+ pages = {1485--1488},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1873951.1874254},
+ doi = {10.1145/1873951.1874254},
+ acmid = {1874254},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {face detection and recognition, machine learning, open source, pattern recognition, vision},
+} 
 
+@article{10.1109/MCSE.2007.55,
+author = {John D. Hunter},
+title = {Matplotlib: A 2D Graphics Environment},
+journal ={Computing in Science and Engineering},
+volume = {9},
+issn = {1521-9615},
+year = {2007},
+pages = {90-95},
+doi = {http://doi.ieeecomputersociety.org/10.1109/MCSE.2007.55},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
