--- a/references.bib
+++ b/references.bib
@@ -115,3 +115,24 @@ doi = {http://doi.ieeecomputersociety.org/10.1109/MCSE.2007.55},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
+
+@article{Beazley2003599,
+title = "Automated scientific software scripting with SWIG",
+journal = "Future Generation Computer Systems",
+volume = "19",
+number = "5",
+pages = "599 - 609",
+year = "2003",
+note = "<ce:title>Tools for Program Development and Analysis. Best papers from two Technical Sessions, at ICCS2001, San Francisco, CA, USA, and ICCS2002, Amsterdam, The Netherlands</ce:title>",
+issn = "0167-739X",
+doi = "10.1016/S0167-739X(02)00171-1",
+url = "http://www.sciencedirect.com/science/article/pii/S0167739X02001711",
+author = "D.M. Beazley",
+keywords = "Scientific software",
+keywords = "SWIG",
+keywords = "Scripting languages",
+keywords = "Python",
+keywords = "Interface compiler"
+}
+
+
