TXT Mahotas works for Python 3 now

--- a/paper.tex
+++ b/paper.tex
@@ -48,7 +48,8 @@ Index (\url{http://pypi.python.org/pypi/mahotas}).
 
 \section{Introduction}
 
-Mahotas is a computer vision library for the Python. It operates on numpy
+Mahotas is a computer vision library for the Python Programming Language
+(versions 2.5 and up, including version 3). It operates on numpy
 arrays~\citep{numpystructure}. Therefore, it uses all the infrastructure built
 by that project for storing information. In particular, unlike libraries
 written in the C~Language or in Java~\citep{Marcel:2010:TMP:1873951.1874254},
