BIB Reference distance map algorithm
I think this is one of the few that is young enough to not be just part
of the culture (along with SURF, of course).

--- a/paper.tex
+++ b/paper.tex
@@ -98,7 +98,8 @@ statistics.
 \item[morphological functions] Erosion and dilation, as well as some more
 complex operations built on these. There are both binary and grayscale
 implementations of these operators.
-\item[watershed] seeded watershed and distance map transforms.
+\item[watershed] seeded watershed and distance map
+transforms~\citep{felzenszwalb}.
 \item[filtering] Gaussian filtering and general convolutions.
 \item[polygon operations] convex hull, polygon drawing.
 \end{description}
