--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,7 @@ url = {http://portal.acm.org/citation.cfm?id=193198},
 year = {1994}
 }
 
-@article{Evans2009,
+@article{evans2009,
 author = {Evans, Christopher},
 file = {:home/luispedro/bibliography/organised/Evans/Evans - 2009 - Notes on the OpenSURF Library SURF Speeded Up Robust Features.pdf:pdf},
 number = {1},
@@ -136,3 +136,11 @@ keywords = "Interface compiler"
 }
 
 
+@techreport{felzenszwalb,
+    title = {Distance Transforms of Sampled Functions},
+    author = {Felzenszwalb, Pedro and Huttenlocher, Daniel},
+    year = {2004},
+    month = sep,
+    url = {http://hdl.handle.net/1813/5663},
+    institution = {Cornell University},
+}
