TXT Add references to papers using mahotas

--- a/paper.tex
+++ b/paper.tex
@@ -403,6 +403,12 @@ Originally, this code was developed in the context of cellular image analysis.
 However, none of the functionality is specific to this context and many
 computer vision pipelines can make use of it.
 
+This package (and earlier versions of it) have been used by
+myself~\citep{Coelho2009,Coelho2010a} and close collaborators in several
+publications~\citep{omerosearcher}. Other groups have used in published work,
+both in cell image analysis~\citep{CYTO:CYTO22034} and in other
+areas~\citep{springerlink:10.1007/978-3-642-32335-5_2}.
+
 \subsection*{Acknowledgements}
 
 Mahotas includes code ported and incorporated from other projects. In
