--- a/references.bib
+++ b/references.bib
@@ -45,16 +45,16 @@ year = {2009}
   keywords = {}
 }
 
-@ARTICLE{numpystructure, 
-author={van der Walt, S. and Colbert, S.C. and Varoquaux, G.}, 
-journal={Computing in Science Engineering}, title={The NumPy Array: A Structure for Efficient Numerical Computation}, 
-year={2011}, 
-month={march-april }, 
-volume={13}, 
-number={2}, 
-pages={22 -30}, 
-keywords={Python programming language;high level language;numerical computation;numerical data;numpy array;data structures;high level languages;mathematics computing;numerical analysis;}, 
-doi={10.1109/MCSE.2011.37}, 
+@ARTICLE{numpystructure,
+author={van der Walt, S. and Colbert, S.C. and Varoquaux, G.},
+journal={Computing in Science Engineering}, title={The NumPy Array: A Structure for Efficient Numerical Computation},
+year={2011},
+month={march-april },
+volume={13},
+number={2},
+pages={22 -30},
+keywords={Python programming language;high level language;numerical computation;numerical data;numpy array;data structures;high level languages;mathematics computing;numerical analysis;},
+doi={10.1109/MCSE.2011.37},
 ISSN={1521-9615},}
 
 @article{Pedregosa:2011:SML:2078183.2078195,
@@ -101,7 +101,7 @@ address = {Los Alamitos, CA, USA},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {face detection and recognition, machine learning, open source, pattern recognition, vision},
-} 
+}
 
 @article{10.1109/MCSE.2007.55,
 author = {John D. Hunter},
@@ -144,3 +144,78 @@ keywords = "Interface compiler"
     url = {http://hdl.handle.net/1813/5663},
     institution = {Cornell University},
 }
+
+
+
+@article{omerosearcher,
+author={Cho, Baek Hwan and Cao-Berg, Ivan and Bakal, Jennifer Ann and Murphy, Robert F},
+title={OMERO.searcher: content-based image search for microscope images},
+journal={Nature Methods},
+year = {2012},
+month = jul,
+pages={633-634},
+url={http://dx.doi.org/10.1038/nmeth.2086}
+}
+
+
+@article {CYTO:CYTO22034,
+author = {Mashburn, David N. and Lynch, Holley E. and Ma, Xiaoyan and Hutson, M. Shane},
+title = {Enabling user-guided segmentation and tracking of surface-labeled cells in time-lapse image sets of living tissues},
+journal = {Cytometry Part A},
+volume = {81A},
+number = {5},
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1552-4930},
+url = {http://dx.doi.org/10.1002/cyto.a.22034},
+doi = {10.1002/cyto.a.22034},
+pages = {409--418},
+keywords = {image segmentation, computer-assisted image processing, tissue analysis, confocal microscopy, Drosophila, embryogenesis},
+year = {2012},
+}
+
+
+@incollection {springerlink:10.1007/978-3-642-32335-5_2,
+   author = {Machálek, Tomáš and Olševičová, Kamila},
+   affiliation = {Faculty of Informatics and Management, Dept.of Information Technologies, University of Hradec Králové, Hradec Králové, Czech Republic},
+   title = {Decentralized Multi-Agent Algorithm for Translational 2D Image Alignment},
+   booktitle = {Multimedia and Internet Systems: Theory and Practice},
+   series = {Advances in Intelligent Systems and Computing},
+   editor = {Zgrzywa, Aleksander and Choroś, Kazimierz and Siemiński, Andrzej},
+   publisher = {Springer Berlin Heidelberg},
+   isbn = {978-3-642-32335-5},
+   keyword = {Engineering},
+   pages = {15-24},
+   volume = {183},
+   year = {2013}
+}
+
+@inproceedings{Coelho2009,
+abstract = {Image segmentation is an essential step in many image analysis pipelines and many algorithms have been proposed to solve this problem. However, they are often evaluated subjectively or based on a small number of examples. To fill this gap, we hand-segmented a set of 97 fluorescence microscopy images (a total of 4009 cells) and objectively evaluated some previously proposed segmentation algorithms. We focus on algorithms appropriate for high-throughput settings, where only minimal user intervention is feasible. The hand-labeled dataset (and all software used to compare methods) is publicly available to enable others to},
+author = {Coelho, Luis Pedro and Shariff, Aabid and Murphy, Robert F.},
+booktitle = {2009 IEEE International Symposium on Biomedical Imaging: From Nano to Macro},
+doi = {10.1109/ISBI.2009.5193098},
+file = {:home/luispedro/bibliography/organised/Coelho, Shariff, Murphy/Coelho, Shariff, Murphy - 2009 - Nuclear segmentation in microscope cell images A hand-segmented dataset and comparison of algorithms.pdf:pdf},
+isbn = {978-1-4244-3931-7},
+keywords = {segmentation},
+pages = {518--521},
+publisher = {IEEE},
+title = {{Nuclear segmentation in microscope cell images: A hand-segmented dataset and comparison of algorithms}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=5193098},
+year = {2009}
+}
+
+
+@article{Coelho2010a,
+author = {Coelho, Luis Pedro and Peng, Tao and Murphy, Robert F.},
+title = {Quantifying the distribution of probes between subcellular locations using unsupervised pattern unmixing},
+volume = {26},
+number = {12},
+pages = {i7-i12},
+year = {2010},
+doi = {10.1093/bioinformatics/btq220},
+abstract ={Motivation: Proteins exhibit complex subcellular distributions, which may include localizing in more than one organelle and varying in location depending on the cell physiology. Estimating the amount of protein distributed in each subcellular location is essential for quantitative understanding and modeling of protein dynamics and how they affect cell behaviors. We have previously described automated methods using fluorescent microscope images to determine the fractions of protein fluorescence in various subcellular locations when the basic locations in which a protein can be present are known. As this set of basic locations may be unknown (especially for studies on a proteome-wide scale), we here describe unsupervised methods to identify the fundamental patterns from images of mixed patterns and estimate the fractional composition of them.Methods: We developed two approaches to the problem, both based on identifying types of objects present in images and representing patterns by frequencies of those object types. One is a basis pursuit method (which is based on a linear mixture model), and the other is based on latent Dirichlet allocation (LDA). For testing both approaches, we used images previously acquired for testing supervised unmixing methods. These images were of cells labeled with various combinations of two organelle-specific probes that had the same fluorescent properties to simulate mixed patterns of subcellular location.Results: We achieved 0.80 and 0.91 correlation between estimated and underlying fractions of the two probes (fundamental patterns) with basis pursuit and LDA approaches, respectively, indicating that our methods can unmix the complex subcellular distribution with reasonably high accuracy.Availability: http://murphylab.web.cmu.edu/softwareContact: murphy@cmu.edu},
+URL = {http://bioinformatics.oxfordjournals.org/content/26/12/i7.abstract},
+eprint = {http://bioinformatics.oxfordjournals.org/content/26/12/i7.full.pdf+html},
+journal = {Bioinformatics}
+}
+
