BIB Add affiliations to contributors

--- a/paper.tex
+++ b/paper.tex
@@ -354,11 +354,13 @@ It requires numpy to be present and installed.
 
 
 \textbf{List of contributors}\\
-Luis Pedro Coelho, Zachary Pincus, Peter J. Verveer, Davis King, Robert Webb
-(Carnegie Mellon University), Matthew Goodman, K.-Michael Aye (University of
-Bern), Rita Simões, Joe Kington (University of Wisconsin Dept. of Geoscience),
-Christoph Gohlke (University of California, Irvine), and Sandro Knauss.
-
+Luis Pedro Coelho (Carnegie Mellon University and Instituto de Medicina
+Molecular), Zachary Pincus (Stanford University), Peter J. Verveer (European
+Molecular Biology Laboratory), Davis King (Northrop Grumman ES), Robert Webb
+(Carnegie Mellon University), Matthew Goodman (University of Texas at Austin),
+K.-Michael Aye (University of Bern), Rita Sim\~{o}es (University of Twente),
+Joe Kington (University of Wisconsin Dept.  of Geoscience), Christoph Gohlke
+(University of California, Irvine), and Sandro Knauss (University of Bremen).
 
 \subsubsection{Software location}
 
