TXT Machine Learning Packages

--- a/references.bib
+++ b/references.bib
@@ -219,3 +219,86 @@ eprint = {http://bioinformatics.oxfordjournals.org/content/26/12/i7.full.pdf+htm
 journal = {Bioinformatics}
 }
 
+@article{Hamilton2007,
+author = {Hamilton, Nicholas A. and Pantelic, Radosav S. and Hanson, Kelly and Teasdale, Rohan D.},
+doi = {10.1186/1471-2105-8-110},
+issn = {1471-2105},
+journal = {BMC bioinformatics},
+keywords = {Computational Biology,Computational Biology: classification,Computational Biology: methods,Image Processing, Computer-Assisted,Image Processing, Computer-Assisted: methods,Phenotype,Software,Subcellular Fractions,Subcellular Fractions: classification,Subcellular Fractions: ultrastructure},
+pages = {110},
+pmid = {17394669},
+title = {{Fast automated cell phenotype image classification.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17394669},
+volume = {8},
+year = {2007}
+}
+@article{Coelho2010,
+author = {Coelho, Luis Pedro and Ahmed, Amr and Arnold, Andrew and Kangas, Joshua and Sheikh, Abdul-Saboor and Xing, Eric P. and Cohen, William W. and Murphy, Robert F.},
+doi = {10.1007/978-3-642-13131-8\_4},
+issn = {0302-9743},
+journal = {Lecture notes in computer science},
+month = jan,
+pages = {23--32},
+pmid = {20628552},
+title = {{Structured Literature Image Finder: Extracting Information from Text and Images in Biomedical Literature.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2901994\&tool=pmcentrez\&rendertype=abstract},
+volume = {6004},
+year = {2010}
+}
+
+@incollection {springerlink:10.1007/978-3-540-30116-5_58,
+   author = {Demšar, Janez and Zupan, Blaž and Leban, Gregor and Curk, Tomaz},
+   affiliation = {Faculty of Computer and Information Science, University of Ljubljana, Slovenia},
+   title = {Orange: From Experimental Machine Learning to Interactive Data Mining},
+   booktitle = {Knowledge Discovery in Databases: PKDD 2004},
+   series = {Lecture Notes in Computer Science},
+   editor = {Boulicaut, Jean-François and Esposito, Floriana and Giannotti, Fosca and Pedreschi, Dino},
+   publisher = {Springer Berlin / Heidelberg},
+   isbn = {978-3-540-23108-0},
+   keyword = {Computer Science},
+   pages = {537-539},
+   volume = {3202},
+   doi = {10.1007/978-3-540-30116-5_58},
+   year = {2004}
+}
+
+@article{Schaul:2010:PYB:1756006.1756030,
+ author = {Schaul, Tom and Bayer, Justin and Wierstra, Daan and Sun, Yi and Felder, Martin and Sehnke, Frank and R\"{u}ckstie\ss, Thomas and Schmidhuber, J\"{u}rgen},
+ title = {PyBrain},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {3/1/2010},
+ volume = {11},
+ month = mar,
+ year = {2010},
+ issn = {1532-4435},
+ pages = {743--746},
+ numpages = {4},
+ url = {http://dl.acm.org/citation.cfm?id=1756006.1756030},
+ acmid = {1756030},
+ publisher = {JMLR.org},
+}
+
+@article{Sonnenburg:2010:SML:1756006.1859911,
+ author = {Sonnenburg, S\"{o}ren and
+                R\"{a}tsch, Gunnar and
+                Henschel, Sebastian and
+                Widmer, Christian and
+                Behr, Jonas and
+                Zien, Alexander and
+                Bona, Fabio de and
+                Binder, Alexander and
+                Gehl, Christian and
+                Vojtěch Franc},
+ title = {The SHOGUN Machine Learning Toolbox},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {3/1/2010},
+ volume = {11},
+ month = aug,
+ year = {2010},
+ issn = {1532-4435},
+ pages = {1799--1802},
+ numpages = {4},
+ url = {http://dl.acm.org/citation.cfm?id=1756006.1859911},
+ acmid = {1859911},
+ publisher = {JMLR.org},
+}
