--- a/paper.tex
+++ b/paper.tex
@@ -86,18 +86,19 @@ FreeBSD), Mac OS X, and Windows.
 
 \subsection{Interface}
 
-The interface is a procedural interface, with most functions working
-independently of each other (there is code sharing at the implementation
+The interface is a procedural interface, with no global state. All functions
+work independently of each other (there is code sharing at the implementation
 level, but this is hidden from the user).
 
 The main functionality is grouped into the following categories:
 
 \begin{description}
-\item[\textsc{surf}] Speeded-up Robust Features~\citep{eth_biwi_00517}. This is
-a collection of local features.
+\item[\textsc{surf}] Speeded-up Robust Features~\citep{eth_biwi_00517}. This
+includes both keypoint detection and descriptor computation.
 \item[features] Global feature descriptors. In particular, Haralick texture
-features, Zernike moments, local binary patterns, threshold adjacency
-statistics.
+features, Zernike moments, local binary patterns, and threshold adjacency
+statistics (both the original~\citep{Hamilton2007} and the parameter-free
+versions~\citep{Coelho2010}).
 \item[Wavelet] Haar and Daubechies wavelets. Forward and inverse transforms.
 \item[morphological functions] Erosion and dilation, as well as some more
 complex operations built on these. There are both binary and grayscale
@@ -108,9 +109,10 @@ transforms~\citep{felzenszwalb}.
 \item[polygon operations] convex hull, polygon drawing.
 \end{description}
 
-In general, functions operate on all data types (except when it not well
-defined). This is performed without any extra memory copies. Mahotas is heavily
-optimised for both speed and memory usage.
+In general, functions operate on all data types (in some cases, the operation
+is only meaningful for floating point arrays, for example). This is performed
+without any extra memory copies. Mahotas is heavily optimised for both speed
+and memory usage (it can be used with very large arrays).
 
 There are a few interface conventions which apply to many functions. When
 meaningful, a structuring element is used to define neighbourhoods or adjacency
@@ -119,22 +121,21 @@ Generally, the default is to use a $3 \times 3$ cross as the default if no
 structuring filter is given (the exception to this rule is the median filter,
 where the default is a $3 \times 3$ square).
 
-Often, functions take an argument named \code{out} where the output will be
-stored. This argument is often much more restricted in type. In particular, it
-must often be a contiguous array.\footnote{Numpy supports non-contiguous
-arrays, which are most often slices into other, larger, contiguous arrays
-(e.g., given a $128 \times 128$ contiguous array, one can build a $64 \times
-128$ non-contiguous array by taking every other row).} Since this is a
-performance feature, it is natural that the interface is less flexible
-(accessing a contiguous array is much more efficient than a non-contiguous
-one).
+When a new image is to be returned, functions take an argument named \code{out}
+where the output will be stored. This argument is often much more restricted in
+type. In particular, it must often be a contiguous array.\footnote{Numpy
+supports non-contiguous arrays, which are most often slices into other, larger,
+contiguous arrays (e.g., given a $128 \times 128$ contiguous array, one can
+build a $64 \times 128$ non-contiguous array by taking every other row).} Since
+this is a performance feature (its purpose is to avoid extra memory
+allocation), it is natural that the interface is less flexible (accessing a
+contiguous array is much more efficient than a non-contiguous one).
 
 \subsection{Example of Use}
 
 This is a simple example of mahotas usage. Code for this and other examples is
 present in the mahotas source distribution under the \texttt{demos/} directory.
-
-In this tutorial, we load an image and find SURF interest point and descriptors
+In this example, we load an image and find SURF interest point and descriptors
 on it.
 
 We start by importing the necessary packages, including numpy and mahotas. We
@@ -148,7 +149,10 @@ from mahotas.features import surf
 import milk
 \end{python}
 
-The first step is to load the image and convert to 8~bit numbers.
+The first step is to load the image and convert to 8~bit numbers. In this
+case, the conversion is done using standard numpy methods, namely
+\code{astype}:
+
 \begin{python}
 f = mahotas.imread('luispedro.jpg', as_grey=True)
 f = f.astype(np.uint8)
@@ -164,11 +168,10 @@ them into a group of five:
 
 \begin{python}
 descrs = spoints[:,6:]
-
 values, _ = milk.kmeans(descrs, 5)
 \end{python}
 
-Finally, we can show the 
+Finally, we can show the points in colour.
 \begin{python}
 colors = np.array(
     [ 255,  25,   1],
@@ -179,8 +182,9 @@ colors = np.array(
 f2 = surf.show_surf(f, spoints[:64], values, colors)
 \end{python}
 
-Using matplotlib~\citep{10.1109/MCSE.2007.55}, we finally display the image as
-Figure~\ref{fig:surf}.
+The \texttt{show\_surf} only builds the image as a multi-channel (one for each
+colour) image. Using matplotlib~\citep{10.1109/MCSE.2007.55}, we finally
+display the image as Figure~\ref{fig:surf}.
 
 \begin{python}
 from matplotlib import pyplot as plt
@@ -204,8 +208,8 @@ the right SURF detections are represented as rectangles of different colours.}
 
 \subsection{Implementation}
 
-Mahotas is written in \cpp, but this is completely hidden from the user as
-there are hand-written Python wrappers for all functions (automatically
+Mahotas is mostly written in \cpp, but this is completely hidden from the user
+as there are hand-written Python wrappers for all functions (automatically
 generated wrappers inevitably lead to worse error messages and are less
 flexible).
 
@@ -316,8 +320,9 @@ for each pixel in the image, look at its neighbours. If all are true, then set
 the corresponding output pixel to \textbf{true} (else, skip it as it has been
 initialised to zero).
 
-Mahotas uses the standard Python build machinery and distribution channels.
-Building and installing from source code is done using
+In keeping with the philosophy of blending in with the ecosystem, Mahotas uses
+the standard Python build machinery and distribution channels. Building and
+installing from source code is done using
 \begin{verbatim}
 python setup.py install
 \end{verbatim}
@@ -359,8 +364,8 @@ Molecular), Zachary Pincus (Stanford University), Peter J. Verveer (European
 Molecular Biology Laboratory), Davis King (Northrop Grumman ES), Robert Webb
 (Carnegie Mellon University), Matthew Goodman (University of Texas at Austin),
 K.-Michael Aye (University of Bern), Rita Sim\~{o}es (University of Twente),
-Joe Kington (University of Wisconsin Dept.  of Geoscience), Christoph Gohlke
-(University of California, Irvine), and Sandro Knauss (University of Bremen).
+Joe Kington (University of Wisconsin), Christoph Gohlke (University of
+California, Irvine), and Sandro Knauss (University of Bremen).
 
 \subsubsection{Software location}
 
@@ -374,14 +379,12 @@ Joe Kington (University of Wisconsin Dept.  of Geoscience), Christoph Gohlke
 
 Mahotas does not include machine learning related functionality, such as
 $k$-means clustering or any classification. This is the result of an explicit
-design decision. Specialised machine learning packages for Python (e.g.,
-milk\footnote{http://github.com/luispedro/milk},
-scikit-learn\footnote{http://scikit-learn}) already
-exist~\citep{Pedregosa:2011:SML:2078183.2078195}. A good classification (or
-other) system can benefit both computer vision users and others. As these
-projects all use Numpy arrays as their data types, it is easy to use
-functionality from the different project seamlessly (no copying of data is
-necessary).
+design decision. Specialised machine learning packages for Python already
+exist~\citep{Pedregosa:2011:SML:2078183.2078195,springerlink:10.1007/978-3-540-30116-5_58,Schaul:2010:PYB:1756006.1756030,Sonnenburg:2010:SML:1756006.1859911}.
+A good classification (or other) system can benefit both computer vision users
+and others. As these projects all use Numpy arrays as their data types, it is
+easy to use functionality from the different project seamlessly (no copying of
+data is necessary).
 
 Python is an ideal language for fast development of both applications and
 scientific software. For this platform, Mahotas is a fast library of computer
